# cpp-ml-inference-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: constraints-ci.txt
.github/workflows/: ci.yml
benchmarks/: .gitkeep  inference_benchmark.cpp
docs/: architecture.md  decision_matrix.md  roadmap.md  v1_1_plan.md  v1_2_plan.md  v1_plan.md
include/: .gitkeep
include/cpp_ml/: decoder.hpp  domain.hpp  image_loader.hpp  inference_engine.hpp  pipeline.hpp  preprocessor.hpp
models/: .gitkeep
python/: constraints-v1.1-macos-arm64-python3.9.6.txt  deep_verify_evidence.py  evidence_manifest.py  export_onnx.py  model.py  requirements.txt  run_batch_experiment.py  train.py  verify_onnx.py
samples/: .gitkeep  synthetic_smoke.ppm
src/: decoder.cpp  domain.cpp  image_loader.cpp  inference_engine.cpp  main.cpp  pipeline.cpp  preprocessor.cpp
tests/: .gitkeep  CMakeLists.txt  benchmark_contract.cmake  cli_contract.cmake  generate_onnx_fixtures.py  ort_e2e_contract.cmake  ort_metadata_contract.cmake  python_dependency_import_gate.py  test_batch_benchmark_record.py  test_batch_experiment.py  test_batch_ort.cpp  test_core.cpp  test_harness.hpp  test_python_pipeline.py
